data/all_generated_tests/raw_wast_tests/br_table_InfiniteLoops_2189.wast
;; 9. **Test 9: Repeated Label in `br_table` Vector**    - **Description**: Include repeated labels within the `br_table` vector inside a loop to challenge the handling of non-unique indices and trigger a constant branching condition.    - **Constraint**: Verifies handling of label uniqueness in the vector.    - **Infinite Loop Relation**: Non-unique label handling mistakes can lead to non-terminating behavior in the loop.

(assert_invalid
  (module
    (func (loop 
      (block 
        (i32.const 0) 
        (br_table 0 0 1) 
      )
      (br 1)
    ))
  )
  "type mismatch"
)